[project]
name = "net-down-alarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pycaw>=20251023",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools >= 80.9.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
net-down-alarm = "main:cli"

[tool.setuptools]
py-modules = ["main"]
